internal/e2e/fixtures/bridge/expected-kubernetes/base/0-bridge-namespace.yaml
#! 0-bridge-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: bridge
    labels:
        com.docker.compose.project: bridge
