internal/e2e/fixtures/bridge/expected-kubernetes/base/serviceA-expose.yaml
#! serviceA-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: servicea
    namespace: bridge
    labels:
        com.docker.compose.project: bridge
        com.docker.compose.service: serviceA
spec:
    selector:
        com.docker.compose.project: bridge
        com.docker.compose.service: serviceA
    ports:
        - name: servicea-8080
          port: 8080
          targetPort: servicea-8080
